--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "gatsby": "^3.4.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-spring": "^9.1.2"
   },
   "devDependencies": {
     "prettier": "2.2.1"
