--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby": "^3.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-spring": "^9.1.2"
+    "react-spring": "^9.1.2",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
